<resources>
    <!-- <resources> -->
    <string name="cachedCredentials" translatable="false">cachedCredentials</string>
    <!-- MAIN -->
    <string name="app_name">Ski Glide Testing</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>

    <string name="help">Help</string>
    <string name="sync">Synchronization started</string>
    <!-- Strings related to login -->
    <string name="btn_login">Login</string>
    <string name="login_failure_message">Login fail</string>
    <string name="login_success_message">OK: </string>
    <string name="logout_err_message">Unexpected error </string>
    <!-- Err fragment -->
    <string name="no_connection_text">No internet connection. Try it again</string>
    <string name="btn_retry">Retry</string>
    <!-- home fragment -->
    <string name="hello_home_fragment">Hello here home fragment</string>
    <string name="btn_sign_out">Log out</string>
    <string name="logout_succes_message">The user has been logged out</string>
    <string name="btn_ski_profile">manage ski profile</string>
    <string name="btn_recomenndation">Ski recomenndation</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <!-- user profile -->
    <string name="exportData">Export all data</string>
    <string name="saved">JSON saved</string>
    <string name="save_error">Error saving JSON file</string>
    <string name="logged">Logged in as %1$s</string>
    <string name="user_info">userName: %1$s\nextraInfo: %2$s\ncreatedAt: %3$s\npicture: %4$s\nemail: %5$s\nnickname: %6$s</string>
    <string name="profile">Profile</string>
    <!-- ski profile activity -->
    <string name="btn_delete_all">Delete all</string>
    <string name="btn_back">Back</string>
    <string name="btn_save">Save</string>
    <string name="addSki">Add new ski</string>
    <string name="editSki">Edit ski</string>
    <string name="browseSki">Browse Ski</string>
    <string name="Name">Name</string>
    <string name="errEmptyFormField">Fill in all required fields!</string>
    <string name="success">Success!</string>
    <string name="update_failure_message">invalid data</string>
    <string name="update_success_message">Updated Successfully!</string>
    <string name="delete_success_message">Successfully removed!</string>
    <string name="delete">Delete</string>
    <string name="delete_info">Delete %1$s ?</string>
    <string name="delete_message"> Are you sure you want to delete %1$s ?</string>
    <string name="delete_everything">Are you sure you want to delete everything?</string>
    <!-- MeasurementActivity -->
    <string name="btn_add_measurement">New measurement</string>
    <string name="new_measurement">New measurement</string>
    <string name="snow_temperature">Snow temperature °C</string>
    <string name="snow">Snow: </string>
    <string name="temperature">Temperature °C</string>
    <string name="ski">Ski</string>
    <!--pořadí snowType musí odpovídat hodnotám číselníku  -->
    <string-array name="snowType">
        <!---
        <item>Freshly attacked powder snow</item>
        <item>Coarse-grained snow</item>
        <item>Ice / extreme</item>
        <item>Soft snow</item>
        <item>Coarse snow</item>
        <item>Fine-grained snow</item>
        <item>Falling snow</item>
        <item>Dirty snow</item>
        <item>Old (transformed) snow </item>
        -->
        <item>Powder snow</item>
        <item>Wet snow (fresh)</item>
        <item>Transformed snow</item>
        <item>Old / artificial snow</item>
        <item>Dirty snow</item>
    </string-array>
    <string-array name="testType">
        <item>Time</item>
        <item>Distance</item>
        <item>Speed</item>
    </string-array>
    <!-- MeasurementActivity List -->
    <string name="ma_btn_add">Add</string>
    <string name="ma_hint_result">Result</string>
    <string name="ma_hint_note">Note…</string>
    <!-- MeasurementActivity Update List item -->
    <string name="usr_update">Update</string>
    <string name="usr_edit">Edit</string>
    <!-- === -->
    <string name="title_activity">Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!--- stopwatch !-->
    <string name="stopwatch">stopwatch</string>
    <string name="stopwatch_start">Start!</string>
    <string name="stopwatch_stop">Stop</string>
    <string name="stopwatch_reset">Reset</string>
    <!-- === -->
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="select_ski">Select ski</string>
    <string name="testType">type of test</string>
    <string name="mfNoteHint">note</string>
    <string name="humidity">Humidity %</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="new_api_version_tittle">A new version of the application has been released</string>
    <string name="btn_close">Close</string>
    <string name="logout_err_offline">the device is offline, connect to the Internet and try again</string>
    <string name="send">Send</string>
    <string name="no_result_data">no matching results found, check that you have taken enough measurements</string>
    <string name="connection_error">Connection error</string>
    <string name="difference">Difference from the best</string>
    <string name="Help">Open help</string>
    <string name="help_content">
           \u2022 Create a profile in the application for all your tested skis.\n
           \u2022Create a new measurement, fill in the meteorological conditions and proceed to enter the results.\n
           \u2022 Records can be edited with a long click.\n
           \u2022 From the measured data, you can predict the best skis in the recommendation activity (This function is the only one that requires an Internet connection).\n
           \u2022 All user data is downloadable in profile activity.\n
    </string>
    <string name="syncBtn">Synchronization</string>
    <string name="mf_pick_date">Pick date</string>
    <string name="mf_pick_time">Pick time</string>
    <string name="mf_test_type">Type:</string>

    <string name="bluetooth_open_activity">Load data from Arduino</string>
    <string name="bluetooth_tittle">Bluetooth controller</string>
    <string name="bluetooth_connect">Connect</string>
    <string name="bluetooth_disconnect">Disconnect</string>
    <string name="bluetooth_connected">Connected</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_led">LED</string>
    <string name="bluetooth_get_data">Get meteodata</string>
    <string name="bluetooth_select">Select Weather Station</string>
    <string name="bluetooth_cancel">Cancel</string>
    <string name="bluetooth_not_mac">Please select device MAC</string>
    <string name="bluetooth_not_found">Device not found</string>
    <string name="skier">skier</string>
    <string name="lg_app_version">App version: %1$s</string>
    <string name="rc_navBar">Recommendation</string>
</resources>