<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.measurement.AddSkiRideFragment">


    <TextView
        android:id="@+id/sr_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ski"
        app:layout_constraintBottom_toTopOf="@+id/sr_skiSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sr_skiSpinner"
        android:layout_width="237dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/select_ski"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sr_tittle" />

    <EditText
        android:id="@+id/sr_result"
        android:layout_width="235dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/ma_hint_result"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/sr_skiSpinner"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="@+id/sr_skiSpinner"
        app:layout_constraintTop_toBottomOf="@+id/sr_skiSpinner" />

    <Button
        android:id="@+id/sr_btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sr_note" />

    <Button
        android:id="@+id/sr_btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/sr_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ma_hint_note"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/sr_result"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/sr_result"
        app:layout_constraintTop_toBottomOf="@+id/sr_stopwatch" />

    <Button
        android:id="@+id/sr_addSki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="+"
        app:layout_constraintStart_toEndOf="@+id/sr_skiSpinner"
        app:layout_constraintTop_toTopOf="@+id/sr_skiSpinner" />

    <Button
        android:id="@+id/sr_stopwatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopwatch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sr_result" />

</androidx.constraintlayout.widget.ConstraintLayout>