<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.recommendation.FormFragment">

    <EditText
        android:id="@+id/rc_snowTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/snow_temperature"
        android:ems="10"
        android:hint="@string/snow_temperature"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/rc_temperature"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/rc_temperature"
        app:layout_constraintTop_toBottomOf="@+id/rc_temperature" />

    <EditText
        android:id="@+id/rc_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/temperature"
        android:ems="10"
        android:hint="@string/temperature"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rc_snowSpinner" />

    <EditText
        android:id="@+id/rc_humidity"
        android:layout_width="212dp"
        android:layout_height="57dp"
        android:autofillHints="@string/humidity"
        android:ems="10"
        android:hint="@string/humidity"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/rc_snowTemperature"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="@+id/rc_snowTemperature"
        app:layout_constraintTop_toBottomOf="@+id/rc_snowTemperature" />

    <Spinner
        android:id="@+id/rc_snowSpinner"
        android:layout_width="237dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/snow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rc_btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rc_humidity" />

    <Button
        android:id="@+id/rcSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="Button"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/rcBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="44dp"
        android:text="@string/btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>